--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -1,15 +1,42 @@
 <!doctype html>
 <html lang="ja">
+
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title | default: "呼吸書房" }}</title>
+    <title>{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}</title>
+    <meta name="author" content="風野 湊">
+    <meta name="description" content="風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出展の案内もこちらからどうぞ。">
+    <meta name="format-detection" content="telephone=no, email=no, address=no">
+
+    <!-- Assets -->
     <link rel="stylesheet" href="/assets/css/style.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico">
+
+    <!-- Social -->
+    <meta property="og:url" content="【ページのURL】 /">
+    <meta property="og:title" content="{%- if title == blank -%}呼吸書房 // 風野湊 Official Website{%- else -%}{{ title }}｜呼吸書房{%- endif -%}" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="【ページの説明】" />
+    <meta property="og:image" content="【サムネイル画像のURL】" />
+    <meta property="og:site_name" content="呼吸書房" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@feelingskyblue" />
+    <meta name="twitter:description" content="【ページの説明】" />
+    <meta name="twitter:image:src" content="【サムネイル画像のURL】" />
+
   </head>
+
   <body>
     <h1>{{ title | default: "呼吸書房" }}</h1>
     <main>
       {{ content }}
     </main>
   </body>
+
 </html>
