レイアウトファイル微調整

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <h1>{{ title | default: "呼吸書房" }}</h1>
+    <!--<h1>{{ title | default: "呼吸書房" }}</h1>-->
     <main>
       {{ content }}
     </main>
