--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@
 :where(body) {
   block-size: 100%;
   block-size: 100dvb;
-  line-height: 1.5;
+  line-height: 1;
   font-family: system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
@@ -109,7 +109,107 @@
   border: 0 !important;
 }
 
-/* main CSS */
+/* Utility */
+/* base CSS */
 body {
   background-color: #fafafa;
+  color: #000000;
+  font-size: 14px;
+  line-height: 1.9;
+  -webkit-text-size-adjust: none;
+  -ms-touch-action: none !important;
+  -webkit-font-smoothing: antialiased;
+}
+
+body.fixed {
+  position: fixed;
+}
+
+p:not(:last-child), blockquote:not(:last-child) {
+  margin-bottom: 1.5em;
+}
+
+a {
+  color: #000000;
+  text-decoration: none;
+}
+
+a:hover {
+  opacity: 0.8;
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
+}
+
+.hide {
+  display: none !important;
+}
+
+.visibility-hidden {
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  border: 0 !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip: rect(0, 0, 0, 0);
+  overflow: hidden;
+  position: absolute;
+  height: 1px;
+  width: 1px;
+}
+
+.visible-phone {
+  display: none !important;
+}
+
+.visible-tablet {
+  display: none !important;
+}
+
+.hidden-desktop {
+  display: none !important;
+}
+
+.visible-desktop {
+  display: inherit !important;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-right {
+  text-align: right;
+}
+
+@media (max-width: 767px) {
+  body {
+    font-size: 13px;
+    line-height: 2.1;
+  }
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important;
+  }
+  .visible-phone {
+    display: inherit !important;
+  }
+  .hidden-phone {
+    display: none !important;
+  }
 }
