--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -34,9 +34,27 @@
 
   <body>
     <!--<h1>{{ title | default: "呼吸書房" }}</h1>-->
-    <main>
+    <main class="main">
       {{ content }}
     </main>
+    <footer class="footer">
+      <nav>
+        <ul>
+          <li><a href="">about / 本サイトについて</a></li>
+          <li><a href="">blog / 雑記</a></li>
+          <li><a href="">event / イベント出店情報</a></li>
+          <li><a href="">contact / お問合せ・ご依頼など</a></li>
+          <li><a href="">privacy-policy / プライバシーポリシー</a></li>
+          <li><a href="">book-list / 書籍情報</a></li>
+          <li><a href="">web-novel / 小説を読む</a></li>
+          <li><a href="">other-work / 紀行文・写真・朗読に触れる</a></li>
+          <li><a href="">online-store / 書籍通販</a></li>
+        </ul>
+      </nav>
+
+      <div>呼吸書房</div>
+      <small>Copyright &copy; Minato Kazano All rights researved.</small>
+    </footer>
   </body>
 
 </html>
