--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,16 +109,21 @@
   border: 0 !important;
 }
 
-/* Utility */
 /* base CSS */
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+  height: 100%;
+}
+
 body {
   background-color: #fafafa;
   color: #000000;
-  font-size: 14px;
-  line-height: 1.9;
+  font-family: Cochin, "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.6;
   -webkit-text-size-adjust: none;
-  -ms-touch-action: none !important;
-  -webkit-font-smoothing: antialiased;
+  touch-action: none !important;
 }
 
 body.fixed {
@@ -130,8 +135,7 @@ p:not(:last-child), blockquote:not(:last-child) {
 }
 
 a {
-  color: #000000;
-  text-decoration: none;
+  color: #49aaa3;
 }
 
 a:hover {
@@ -139,32 +143,20 @@ a:hover {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
   visibility: hidden;
 }
 
-.hide {
-  display: none !important;
-}
-
-.visibility-hidden {
-  position: absolute !important;
-  white-space: nowrap !important;
-  width: 1px !important;
-  height: 1px !important;
-  overflow: hidden !important;
-  border: 0 !important;
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
 .visually-hidden {
-  clip: rect(0 0 0 0);
-  clip: rect(0, 0, 0, 0);
+  position: absolute !important;
   overflow: hidden;
-  position: absolute;
-  height: 1px;
   width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  word-wrap: normal !important;
 }
 
 .visible-phone {
@@ -195,10 +187,13 @@ a:hover {
   text-align: right;
 }
 
+.font-serif {
+  font-family: Cochin, "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", serif;
+}
+
 @media (max-width: 767px) {
   body {
-    font-size: 13px;
-    line-height: 2.1;
+    font-size: 1.3rem;
   }
   .hidden-desktop {
     display: inherit !important;
