--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,144 +1,28 @@
 @charset "utf-8";
 
-/* Reset CSS */
-*,
-*::before,
-*::after {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-}
-
-:where([hidden]:not([hidden='until-found'])) {
-	display: none !important;
-}
-
-:where(html) {
-	-webkit-text-size-adjust: none;
-	//color-scheme: dark light;
-}
-
-@supports not (min-block-size: 100dvb) {
-	:where(html) {
-		block-size: 100%;
-	}
-}
-
-@media (prefers-reduced-motion: no-preference) {
-	:where(html:focus-within) {
-		scroll-behavior: smooth;
-	}
-}
-
-:where(body) {
-	block-size: 100%;
-	block-size: 100dvb;
-	line-height: 1;
-	font-family: system-ui, sans-serif;
-	-webkit-font-smoothing: antialiased;
-}
-
-:where(input, button, textarea, select) {
-	font: inherit;
-	color: inherit;
-}
-
-:where(textarea) {
-	resize: vertical;
-	resize: block;
-}
-
-:where(button, label, select, summary, [role='button'], [role='option']) {
-	cursor: pointer;
-}
-
-:where(:disabled) {
-	cursor: not-allowed;
-}
-
-:where(label:has(> input:disabled), label:has(+ input:disabled)) {
-	cursor: not-allowed;
-}
-
-:where(button) {
-	border-style: solid;
-}
-
-:where(a) {
-	text-underline-offset: 0.2ex;
-}
-
-:where(ul, ol) {
-	list-style: none;
-}
-
-:where(img, svg, video, canvas, audio, iframe, embed, object) {
-	display: block;
-}
-
-:where(img, picture, svg) {
-	max-inline-size: 100%;
-	block-size: auto;
-}
-
-:where(p, h1, h2, h3, h4, h5, h6) {
-	overflow-wrap: break-word;
-}
-
-:where(h1, h2, h3) {
-	line-height: calc(1em + 0.5rem);
-}
-
-:where(hr) {
-	border: none;
-	border-block-start: 1px solid;
-	color: inherit;
-	block-size: 0;
-	overflow: visible;
-}
-
-:where(:focus-visible) {
-	outline: 2px solid var(--focus-color, Highlight);
-	outline-offset: 2px;
-}
-
-:where(.visually-hidden:not(:focus, :active, :focus-within, .not-visually-hidden)) {
-	clip-path: inset(50%) !important;
-	height: 1px !important;
-	width: 1px !important;
-	overflow: hidden !important;
-	position: absolute !important;
-	white-space: nowrap !important;
-	border: 0 !important;
-}
-
-/* Utility */
-$sp-width: 767px;
-$textColor: #000000;
-$subColor: #000000;
-
-// FlexBox
-@mixin flex($flex-wrap: nowrap) {
-	display: flex;
-	flex-wrap: $flex-wrap;
-}
-@mixin flexCentering($flex-wrap: nowrap) {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-wrap: $flex-wrap;
-}
+@import "core/reset";
+@import "core/utility";
 
 /* base CSS */
-
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
+	height: 100%;
+}
 body {
   background-color: #fafafa;
   color: $textColor;
-  font-size: 14px;
-  line-height: 1.9;
+	font-family: Cochin, "Helvetica Neue",
+    Arial,
+    "Hiragino Kaku Gothic ProN",
+    "Hiragino Sans",
+    Meiryo,
+    sans-serif;
+  font-size: 1.4rem;
+  line-height: 1.6;
   -webkit-text-size-adjust: none;
   -ms-touch-action: none !important;
-  -webkit-font-smoothing: antialiased;
+	touch-action: none !important;
 }
 
 body.fixed {
@@ -150,8 +34,7 @@ p:not(:last-child), blockquote:not(:last-child) {
 }
 
 a {
-  color: $subColor;
-  text-decoration: none;
+  color: $keyColor;
 }
 
 a:hover {
@@ -159,32 +42,20 @@ a:hover {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
   visibility: hidden;
 }
 
-.hide {
-  display: none !important;
-}
-
-.visibility-hidden {
-  position: absolute !important;
-  white-space: nowrap !important;
-  width: 1px !important;
-  height: 1px !important;
-  overflow: hidden !important;
-  border: 0 !important;
-  margin: 0 !important;
-  padding: 0 !important;
-}
-
 .visually-hidden {
-  clip: rect(0 0 0 0);
-  clip: rect(0, 0, 0, 0);
+	position: absolute !important;
   overflow: hidden;
-  position: absolute;
-  height: 1px;
   width: 1px;
+  height: 1px;
+	margin: -1px;
+	padding: 0;
+	border: 0;
+  clip: rect(0 0 0 0);
+	word-wrap: normal !important;
 }
 
 .visible-phone {
@@ -215,11 +86,14 @@ a:hover {
   text-align: right;
 }
 
+.font-serif {
+	font-family: Cochin, "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", serif;
+}
+
 @media (max-width: $sp-width) {
 
   body {
-    font-size: 13px;
-    line-height: 2.1;
+    font-size: 1.3rem;
   }
 
 	.hidden-desktop {
