TOP実装の進行中

--- a/assets/scss/core/_utility.scss
+++ b/assets/scss/core/_utility.scss
@@ -1,6 +1,7 @@
 // Utility
 $sp-width: 767px;
-$textColor: #000000;
+$textColor: #231916;
+$bgColor: #fafafa;
 $keyColor: #49aaa3;
 $keyColorDark: #37807a;
 $subColor: #000000;
