--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -40,15 +40,15 @@
     <footer class="footer">
       <nav>
         <ul>
-          <li><a href="">about / 本サイトについて</a></li>
-          <li><a href="">blog / 雑記</a></li>
-          <li><a href="">event / イベント出店情報</a></li>
-          <li><a href="">contact / お問合せ・ご依頼など</a></li>
-          <li><a href="">privacy-policy / プライバシーポリシー</a></li>
-          <li><a href="">book-list / 書籍情報</a></li>
-          <li><a href="">web-novel / 小説を読む</a></li>
-          <li><a href="">other-work / 紀行文・写真・朗読に触れる</a></li>
-          <li><a href="">online-store / 書籍通販</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">about / 本サイトについて</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">blog / 雑記</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">event / イベント出店情報</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">contact / お問合せ・ご依頼など</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">privacy-policy / プライバシーポリシー</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">book-list / 書籍情報</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">web-novel / 小説を読む</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">other-work / 紀行文・写真・朗読に触れる</a></li>
+          <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">online-store / 書籍通販</a></li>
         </ul>
       </nav>
 
