--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -32,8 +32,7 @@
 
   </head>
 
-  <body>
-    <!--<h1>{{ title | default: "呼吸書房" }}</h1>-->
+  <body class="{{ template | default: 'homePage' }}">
     <main class="main">
       {{ content }}
     </main>
