書籍一覧マークアップ

--- a/_includes/info-dream.liquid
+++ b/_includes/info-dream.liquid
@@ -1,37 +1,31 @@
-【忘れがたい風景たちへ。】
-【幻想掌編集 / 文庫判 / オンデマンドフルカラー表紙 / 54P】
+<p>【幻想掌編集 / 文庫判 / オンデマンドフルカラー表紙 / 54ページ】</p>
+<p class="book-info__copy">忘れがたい風景たちへ。</p>
+<p>彼らは唯の夢だから、本当は何も語らない。<br>彼らは唯の夢であり、物語でも何でもない。<br>彼らは唯の夢だけど——</p>
+<p>◇　◆　◇</p>
+<p>本書は、著者の夢日記を元に創作された幻想掌編集です。<br>Twitterへ投稿した140字の夢日記から、当時見た夢を思い出し、ときには改変し、修飾して、忘れてしまった箇所は空想で繋ぎあわせながら、六つの掌編を書き起こしました。<br>
+いずれも厳密には夢そのものではなく、物語としては筋書きが曖昧で、詩と呼ぶには少々長すぎる。<br>
+おそらく最も近い言葉は「風景」なのだろうと思います。</p>
+<a href="https://kokyushobo.booth.pm/items/3427988" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i19729.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜収録作品＞</h4>
+  </header>
+  <ul class="list__style--dot">
+    <li>砂漠と旅の話を</li>
+    <li>春の光を塗り替える</li>
+    <li>環世界の岸辺で二人</li>
+    <li>聴衆は生きている</li>
+    <li>だから自由のはずなのに</li>
+    <li>だから自由にどこまでも</li>
+  </ul>
+  <p>※収録作品はすべて書き下ろしです。</p>
 
-彼らは唯の夢だから、本当は何も語らない。
-彼らは唯の夢であり、物語でも何でもない。
-彼らは唯の夢だけど——
+  <blockquote>
+    <p>何故そんなことを気にしたのか、夢の中のわたしは知らない。<br>分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。<br>これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。</p>
+  </blockquote>
 
-====================================
-
-本書は、著者の夢日記を元に創作された幻想掌編集です。
-第33回文学フリマ東京の新刊となります。
-
-Twitterへ投稿した140字の夢日記から、当時見た夢を思い出し、ときには改変し、修飾して、忘れてしまった箇所は空想で繋ぎあわせながら、六つの掌編を書き起こしました。
-いずれも厳密には夢そのものではなく、物語としては筋書きが曖昧で、詩と呼ぶには少々長すぎる。
-おそらく最も近い言葉は「風景」なのだろうと思います。
-
-＜収録作品＞
-・砂漠と旅の話を
-・春の光を塗り替える
-・環世界の岸辺で二人
-・聴衆は生きている
-・だから自由のはずなのに
-・だから自由にどこまでも
-
-※収録作品はすべて書き下ろしです。
-一部作品はWeb上での公開を予定しています。
-
-各掌編の掌編掌編掌編試し読みを以下ツイートにまとめました。
-https://twitter.com/feelingskyblue/status/1459878432301481990
-
-====================================
-
-何故そんなことを気にしたのか、夢の中のわたしは知らない。
-分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。
-
-Special Thanks
-表紙装画：ほがり仰夜さん https://twitter.com/torinomeBinzume
+  <p>Special Thanks<br>
+  表紙装画：ほがり仰夜さん <a href="https://twitter.com/torinomeBinzume" target="_blank" rel="nofollow">https://twitter.com/torinomeBinzume</a></p>
+</section>
+<hr>
