--- a/_includes/info-eien.liquid
+++ b/_includes/info-eien.liquid
@@ -1,46 +1,27 @@
-【あなたの不在を愛する。】
-【幻想短編集Ⅱ / 文庫版 / オンデマンドフルカラー表紙 / 114P】
-
-きみはどこにもいない。
-この世どころかあの世にも、あらゆる過去にも未来にも、きみは永遠に存在しない。
-
-
-▼特設ページ / 全収録作サンプル掲載中
-http://kokyushobo.com/eien.html
-
-▼朗読音声
-作家と刑罰｜Souncloudへジャンプします
-
-▼感想ツイートまとめ（ネタバレを含むものは除いています）
-https://twitter.com/i/moments/799880765882310656
-
-====================================
-
-「不在」をテーマにした、ふたつめの幻想短編集です。
-何かを失い、あるいは投げ捨て、もしくは奪われたひとびとの、永遠に埋まらない空席を眺めつづけるような短編と掌編を７編収録。
-
-各編の舞台は、遠い未来、現代東京、天国と地獄、そして暗闇をめぐります。登場人物たちに関連性はありません。
-そもそも登場人物さえ不在かもしれません。
-
-＜収録作品＞ こちらで立ち読み公開中です。
-　*海を商う
-　*夢みる時差のために
-　*作家と刑罰
-　・踊ろうポラリス
-　*昼の光から逃れるために
-　・くらやみのこども
-　・あなたの不在を愛する
-
-※*印の作品は即興小説作品のリライト掌編となります。
-
-====================================
-
-
-おかしな話だと思わないか。
-存在しないきみの不在を、ぼくはなぜだか知っているのだ。
-
-その瞳を、声を、微笑を
-まるで眼前に在るかのように
-うつくしく克明に夢みながら
-その不在を信じるがゆえに
-ぼくはきみの実在を信じる。
+<p>【幻想短編集Ⅱ / 文庫版 / オンデマンドフルカラー表紙 / 114ページ】</p>
+<p class="book-info__copy">あなたの不在を愛する。</p>
+<p>きみはどこにもいない。<br>この世どころかあの世にも、あらゆる過去にも未来にも、きみは永遠に存在しない。</p>
+<p>◇　◆　◇</p>
+<p>「不在」をテーマにした、ふたつめの幻想短編集です。<br>何かを失い、あるいは投げ捨て、もしくは奪われたひとびとの、<br class="hidden-phone">永遠に埋まらない空席を眺めつづけるような短編と掌編を７編収録。</p>
+<p>各編の舞台は、遠い未来、現代東京、天国と地獄、そして暗闇をめぐります。<br>登場人物たちに関連性はありません。<br>そもそも登場人物さえ不在かもしれません。</p>
+<a href="https://kokyushobo.booth.pm/items/231727" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i20355.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜収録作品＞</h4>
+  </header>
+  <ul class="list__style--dot">
+    <li>海を商う</li>
+    <li>夢みる時差のために</li>
+    <li>作家と刑罰</li>
+    <li>踊ろうポラリス</li>
+    <li>くらやみのこども</li>
+    <li>あなたの不在を愛する</li>
+  </ul>
+  <blockquote>
+    <p>おかしな話だと思わないか。<br>存在しないきみの不在を、ぼくはなぜだか知っているのだ。</p>
+    <p>その瞳を、声を、微笑を<br>まるで眼前に在るかのように<br>うつくしく克明に夢みながら<br>その不在を信じるがゆえに<br>ぼくはきみの実在を信じる。</p>
+  </blockquote>
+</section>
+<hr>
+<!-- http://kokyushobo.com/eien.html -->
