--- a/_includes/info-aoakane.liquid
+++ b/_includes/info-aoakane.liquid
@@ -1,60 +1,32 @@
-【崩壊する空想に、どうか歓声を】
-【旅行記 / 新書版 / オンデマンドフルカラーカバー / 76P（内カラー10P）】
-
-本書はガイドブックではありません。
-おそらく紀行文でもありません。
-では小説か詩集かといえば、それも違うように思います。
-
-「お話」、どうやらこれが一番近い。
-
-これは、モロッコを旅したときのお話です。
-
-
-▼朗読音声
-マラケシュが呼ぶ雨の音｜Soundcloudへジャンプします
-
-▼旅先写真
-http://feelingskyblue.tumblr.com/
-
-▼感想ツイートまとめ
-https://twitter.com/i/moments/800194146715607041
-
-===============================================
-
-サハラ砂漠に憧れて、ひとりモロッコを訪ねたのが2014年春のこと。
-その旅の記憶をもとに、八編のお話を書き下ろしました。
-はたしてこれは旅行記なのか何なのか、
-エッセイと詩と小説の間をふらふらと彷徨いつつ、
-言葉の中でもう一度、モロッコを巡ってゆきます。
-
-また、巻頭と本文中には、旅先で撮影したカラー写真10枚を収録。
-巻末にはオマケとして、実際の旅行先で掛かった費用などをひっそりまとめています。
-
-===============================================
-
-＜収録作品＞
-
-町の話Ⅰ
-　　・古都メクネス、あなたを信じます
-　　・ラララシャウエン、ブルーブルー
-　　・ハシラビード砂漠の畔
-
-砂漠の話
-　　・無音にとどろく人間の声
-
-町の話Ⅱ
-　　・ワルザザートと境を越えて
-　　・マラケシュが呼ぶ雨の音
-　　・カサブランカに会えない
-
-静寂の話
-　　（サハラ砂漠にて）
-
-巻末付記　旅支度のために
-
-===============================================
-
-※無料立ち読みはこちらから
-※すべての作品は書きおろしです
-※旅先の写真、音声、ビデオは以下のTumblrにて。
-http://feelingskyblue.tumblr.com/
+<p>【旅行記 / 新書版 / オンデマンドフルカラーカバー / 76ページ（内カラー10ページ）】</p>
+<p class="book-info__copy">崩壊する空想に、どうか歓声を</p>
+<p>本書はガイドブックではありません。<br>
+おそらく紀行文でもありません。<br>
+では小説か詩集かといえば、それも違うように思います。</p>
+<p>「お話」、どうやらこれが一番近い。</p>
+<p>これは、モロッコを旅したときのお話です。</p>
+<p>◇　◆　◇</p>
+<p>サハラ砂漠に憧れて、ひとりモロッコを訪ねたのが2014年春のこと。<br>その旅の記憶をもとに、八編のお話を書き下ろしました。<br>はたしてこれは旅行記なのか何なのか、<br class="hidden-phone">エッセイと詩と小説の間をふらふらと彷徨いつつ、<br class="hidden-phone">言葉の中でもう一度、モロッコを巡ってゆきます。</p>
+<p>また、巻頭と本文中には、旅先で撮影したカラー写真10枚を収録。<br>巻末にはオマケとして、実際の旅行先で掛かった費用などをひっそりまとめています。</p>
+<a href="https://kokyushobo.booth.pm/items/231726" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i12258.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜収録作品＞</h4>
+  </header>
+  <p>町の話Ⅰ<br>
+  ・古都メクネス、あなたを信じます<br>
+  ・ラララシャウエン、ブルーブルー<br>
+  ・ハシラビード砂漠の畔<br>
+  </p>
+  <p>砂漠の話<br>
+  ・無音にとどろく人間の声</p>
+  <p>町の話Ⅱ<br>
+  ・ワルザザートと境を越えて<br>
+  ・マラケシュが呼ぶ雨の音<br>
+  ・カサブランカに会えない</p>
+  <p>静寂の話<br>
+  （サハラ砂漠にて）</p>
+  <p>巻末付記　旅支度のために</p>
+</section>
+<hr>
