--- a/_includes/info-ryuyome.liquid
+++ b/_includes/info-ryuyome.liquid
@@ -1,40 +1,30 @@
-【どうしても死にたくない。】
-【長編小説 / 新書版 / オンデマンドフルカラー表紙 / 178P】
-
-守り神たる竜の在る世界。
-最後に捧げられたのは、村でもっとも嫌われた娘。野火のように激しく、荒々しく、彼女は村を憎んだ。
-
-▼感想ツイートまとめ（ネタバレを含むものは除いています）
-https://twitter.com/i/moments/800199237602414592
-
-
-====================================
-
-風景幻想特化のハイファンタジー小説です。
-起承転結よりも、世界の在り様やひとびとの仕草、感情、日常の手仕事を愛する方に、楽しんでいただけるように思います。
-ファンタジーと銘打っているものの、明確な魔法は登場いたしません。
-新装版発行にあたって、表紙の差し替えと表現の微調整を行いました。
-
-【本編目次】　※無料立ち読みはこちらから
-
-名もなき竜の宮Ⅰ
-
-竜の花嫁
-　一章　嫁入りの日
-　二章　金の瞳、遠雷の声
-　三章　雨と眠りに安らぐもの
-　四章　かつて殺されたすべての私たちへ
-　五章　野火迫る
-　六章　竜の花嫁
-
-名もなき竜の宮Ⅱ
-
-====================================
-
-なぜ、自分が殺されねばならないのか。
-問うた娘に竜は答えた。
-
-「いいや私はもう人間を喰わない。おまえは村に帰っていいのだ」
-
-Special Thanks
-表紙装画：そぞらさん https://twitter.com/r_sozora
+<p>【長編小説 / 新書版 / オンデマンドフルカラー表紙 / 178ページ】</p>
+<p class="book-info__copy">どうしても死にたくない。</p>
+<p>守り神たる竜の在る世界。<br>最後に捧げられたのは、村でもっとも嫌われた娘。<br>野火のように激しく、荒々しく、彼女は村を憎んだ。</p>
+<p>◇　◆　◇</p>
+<p>風景幻想特化のハイファンタジー小説です。<br>起承転結よりも、世界の在り様やひとびとの仕草、感情、日常の手仕事を愛する方に、楽しんでいただけるように思います。<br>ファンタジーと銘打っているものの、明確な魔法は登場しません。</p>
+<a href="https://kokyushobo.booth.pm/items/229863" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜本編目次＞</h4>
+  </header>
+  <p>名もなき竜の宮Ⅰ</p>
+  <p>竜の花嫁<br>
+    　一章　嫁入りの日<br>
+    　二章　金の瞳、遠雷の声<br>
+    　三章　雨と眠りに安らぐもの<br>
+    　四章　かつて殺されたすべての私たちへ<br>
+    　五章　野火迫る<br>
+    　六章　竜の花嫁</p>
+  <p>名もなき竜の宮Ⅱ</p>
+  <blockquote>
+    <p>なぜ、自分が殺されねばならないのか。<br>問うた娘に竜は答えた。</p>
+    <p>「いいや私はもう人間を喰わない。おまえは村に帰っていいのだ」</p>
+  </blockquote>
+  <dl>
+    <dt>Special Thanks</dt>
+    <dd>表紙装画：そぞらさん <a href="https://twitter.com/r_sozora" target="_blank" rel="nofollow">https://twitter.com/r_sozora</a></dd>
+  </dl>
+</section>
+<hr>
