--- a/_includes/info-tabibito.liquid
+++ b/_includes/info-tabibito.liquid
@@ -1,53 +1,40 @@
-【旅人よ立ち止まれ。耳を澄ますために。】
-【旅行記 / B6版 / オンデマンドフルカラーカバー / 128P（内カラー18P）】
-※再版と印刷所変更に伴い、2017年11月頒布分より、カバー付き文中カラー有りの仕様となりました。
-
-▼朗読音声
-君は手ぶらで門を出るつもりか｜ポーランド・アウシュヴィッツ
-雪の砂漠｜エジプト・ホワイトデザート
-
-▼旅先写真
-http://feelingskyblue.tumblr.com/
-
-▼感想ツイートまとめ
-https://twitter.com/i/moments/800203702317432833
-
-===========================================
-
-この本はガイドブックではありません。
-もしかすると旅行記でもないのかもしれません。詩集と呼ぶにも何かが足りない。
-2011年、半年間の一人旅の合間に書き継いできた言葉たちに、
-新たに書きおろしたエッセイと言葉、旅先で撮影した写真を加え、一冊の本にまとめました。
-巻頭にはカラー写真を四枚、各国ごとの章扉にもカラー写真を一枚ずつ掲載。
-新装版発行にあたって、旅支度のおまけページを巻末に追加しました。
-
-　＜収録作品＞
-　　*空っぽな跳躍
-　　*調律グローバリゼーション
-　　*メコンリバー・ヤマハリバー
-　　*コラム：デタムストリート
-　　*氾濫に溺れる
-　　*コラム：哀しき世界一周航空券
-　　・ブルーソフィア・スーツ
-　　*コラム：屋台信仰
-　　・サントリーニの本当の名前
-　　・通学途中のアコーディオン弾き
-　　*コラム：内在する後ろめたさに対する皮肉と自己弁護
-　　・雪の砂漠
-　　・実在よりも美しい造花の為に
-　　*ナショナル・ミュージアム・ライブラリー
-　　*コラム：ファンタジー・ライブラリー・コンプレックス
-　　・君は手ぶらで門を出るつもりか
-　　・フランツ氏への簡潔な報告
-　　・どうして偽物なファンタジー
-　　*コラム：血管がめぐる家
-　　・北ウェールズの赤い海
-　　*コラム：黄昏を見失う
-　　*コラム：親愛なるハワース
-　　*アウロラ
-　　*夏休みとエピローグ
-
-※*印の作品は書き下ろしです。
-※作品は滞在国順に並んでいます。
-シンガポール→ベトナム→インド→トルコ→ギリシア→エジプト→イタリア→
-→オーストリア→ポーランド→チェコ→ドイツ→イギリス→カナダ→ハワイ
+<p>【旅行記 / B6版 / オンデマンドフルカラーカバー / 128ページ（内カラー18ページ）】</p>
+<p class="book-info__copy">旅人よ立ち止まれ。耳を澄ますために。</p>
+<p>この本はガイドブックではありません。<br>
+もしかすると旅行記でもないのかもしれません。詩集と呼ぶにも何かが足りない。<br>
+2011年、半年間の一人旅の合間に書き継いできた言葉たちに、<br class="hidden-phone">新たに書きおろしたエッセイと言葉、旅先で撮影した写真を加え、一冊の本にまとめました。<br>巻頭にはカラー写真を四枚、各国ごとの章扉にもカラー写真を一枚ずつ掲載。<br>新装版発行にあたって、旅支度のおまけページを巻末に追加しました。</p>
+<a href="https://kokyushobo.booth.pm/items/229857" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜収録作品＞</h4>
+  </header>
+  <ul class="list__style--dot">
+    <li>空っぽな跳躍</li>
+    <li>調律グローバリゼーション</li>
+    <li>メコンリバー・ヤマハリバー</li>
+    <li>コラム：デタムストリート</li>
+    <li>氾濫に溺れる</li>
+    <li>コラム：哀しき世界一周航空券</li>
+    <li>ブルーソフィア・スーツ</li>
+    <li>コラム：屋台信仰</li>
+    <li>サントリーニの本当の名前</li>
+    <li>通学途中のアコーディオン弾き</li>
+    <li>コラム：内在する後ろめたさに対する皮肉と自己弁護</li>
+    <li>雪の砂漠</li>
+    <li>実在よりも美しい造花の為に</li>
+    <li>ナショナル・ミュージアム・ライブラリー</li>
+    <li>コラム：ファンタジー・ライブラリー・コンプレックス</li>
+    <li>君は手ぶらで門を出るつもりか</li>
+    <li>フランツ氏への簡潔な報告</li>
+    <li>どうして偽物なファンタジー</li>
+    <li>コラム：血管がめぐる家</li>
+    <li>北ウェールズの赤い海</li>
+    <li>コラム：黄昏を見失う</li>
+    <li>コラム：親愛なるハワース</li>
+    <li>アウロラ</li>
+    <li>夏休みとエピローグ</li>
+  </ul>
+  <p>※作品は滞在国順に並んでいます。<br>シンガポール→ベトナム→インド→トルコ→ギリシア→エジプト→イタリア→オーストリア→ポーランド→チェコ→ドイツ→イギリス→カナダ→ハワイ</p>
+</section>
+<hr>
