--- a/_includes/info-tree.liquid
+++ b/_includes/info-tree.liquid
@@ -1,53 +1,47 @@
-【そのようにして、魔法は失われた。】
-【長編小説 / 四六判 / オンデマンドフルカラー表紙 / 250P】
-透明な街、うつくしい街、ちょうど日付が変わる頃のこと。
-一人の優しい娘が、唐突に、身に覚えもなく、一本の樹木に変えられてしまう。
-真夜中の熱帯雨林に立ち尽くし、かつて人間だったその樹木は夢を見る。
-そして思い出す。
-子供のころ、すぐ間近に、樹木へ変身できる人間が居たことを。
+<p>【長編小説 / 四六判 / オンデマンドフルカラー表紙 / 250ページ】</p>
+<p class="book-info__copy">そのようにして、魔法は失われた。</p>
+<p>透明な街、うつくしい街、ちょうど日付が変わる頃のこと。<br>一人の優しい娘が、唐突に、身に覚えもなく、一本の樹木に変えられてしまう。<br>真夜中の熱帯雨林に立ち尽くし、かつて人間だったその樹木は夢を見る。<br>そして思い出す。<br>子供のころ、すぐ間近に、樹木へ変身できる人間が居たことを。</p>
+<p>◇　◆　◇</p>
+<p>架空の熱帯雨林を舞台とした樹木変身譚です。<br>樹木に変わる/変えられる人々を描く幻想（ファンタジー）小説でもあります。<br>遠い異国の生活描写に没入したい方、迫り来る幻想に慄きたい方、答えのない問いかけに惹かれる方へ。</p>
+<a href="https://kokyushobo.booth.pm/items/2530535" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i19726.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<hr>
+<section>
+  <header class="book-info__header">
+    <h4>＜本編目次＞</h4>
+  </header>
+  <p>第一章　雨の歌う町<br>
+  　　 1　いつか帰る場所<br>
+  　　 2　相槌と挨拶<br>
+  </p>
+  <p>第二章　あなたは孤独ではない<br>
+  　　 3　鳥市場<br>
+  　　 4　雲と煙の兄弟<br>
+  　　 5　スコールと木々のダンス<br>
+  </p>
+  <p>第三章　言葉のない世界<br>
+  　　 6　木喰い蔓<br>
+  　　 7　カルス・メリステム<br>
+  　　 8　草木交信<br>
+  　　 9　彼らは人間じゃない<br>
+  　　10　極相林<br>
+  　　11　変身<br>
+  </p>
+  <p>第四章　楽園の善良な樹木<br>
+  　　12　現実<br>
+  　　13　魔法の杖<br>
+  　　14　愛しいあなたのために<br>
+  　　15　剪定鋏<br>
+  　　16　楽園の優しき人々<br>
+  </p>
+  <p>樹木たちは語る</p>
+  <blockquote>
+    <p>夜が明けると、村に人間は一人もいなかった。<br>少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。<br>彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。<br>やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
+  </blockquote>
 
-▼冒頭20000字試し読みを公開しました
-https://kokyushobo.com/novel/trees_light.html
-
-※2022年5月再販分より、表紙をリデザインしました
-
-====================================
-
-架空の熱帯雨林を舞台とした樹木変身譚です。
-樹木に変わる/変えられる人々を描く幻想（ファンタジー）小説でもあります。 遠い異国の生活描写に没入したい方、迫り来る幻想に慄きたい方、答えのない問いかけに惹かれる方へ。
-
-【本編目次】
-
-第一章　雨の歌う町
-　　 1　いつか帰る場所
-　　 2　相槌と挨拶
-
-第二章　あなたは孤独ではない
-　　 3　鳥市場
-　　 4　雲と煙の兄弟
-　　 5　スコールと木々のダンス
-
-第三章　言葉のない世界
-　　 6　木喰い蔓
-　　 7　カルス・メリステム
-　　 8　草木交信
-　　 9　彼らは人間じゃない
-　   10　極相林
-　   11　変身
-
-第四章　楽園の善良な樹木
-　   12　現実
-　   13　魔法の杖
-　   14　愛しいあなたのために
-　   15　剪定鋏
-　   16　楽園の優しき人々
-
-樹木たちは語る
-
-====================================
-
-夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。
-
-Special Thanks
-表紙装画：佐野裕一さん https://twitter.com/sunamerius
-ジャケットデザイン：山川夜高さん https://twitter.com/mtn_river
+  <dl>
+    <dt>Special Thanks</dt>
+    <dd>表紙装画：佐野裕一さん <a href="https://twitter.com/sunamerius" target="_blank" rel="nofollow">https://twitter.com/sunamerius</a></dd>
+    <dd>ジャケットデザイン：山川夜高さん <a href="https://libsy.net/" target="_blank" rel="nofollow">https://libsy.net/</a></dd>
+  </dl>
+</section>
+<hr>
