--- a/assets/scss/core/_utility.scss
+++ b/assets/scss/core/_utility.scss
@@ -1,9 +1,9 @@
 // Utility
 $sp-width: 767px;
 $textColor: #231916;
-$bgColor: #fafafa;
-$keyColor: #49aaa3;
-$keyColorDark: #37807a;
+$bgColor: #fefbf9;
+$keyColor: #49aaa3; //37807a 49aaa3 //#55acee
+$keyColorDark: #29605c;
 $subColor: #000000;
 
 // FlexBox
