--- a/_includes/info-postcard-6.liquid
+++ b/_includes/info-postcard-6.liquid
@@ -6,17 +6,9 @@
   <header class="book-info__header">
     <h4>the letter from "rain forest"　— 遠い国からの手紙 追伸 —</h4>
   </header>
-  <p>既刊『すべての樹木は光』の30年後、ある町角での後日談。<br>大人になったチジュが、ニイジェと再会し、二人でひとときの旅行に出かけるお話です。<br>本編の記憶が朧げにあれば読了に支障はない、はず。きっと。</p>
-  <p>ユハの主観で語られた本編とは異なり、こちらの後日談はチジュの視点によるものです。<br>
-  物語は既に幕を下ろした後。登場人物はチジュ、ニイジェ、本編未登場の新キャラクターのみ。<br>
+  <p>既刊『すべての樹木は光』の30年後、ある町角での後日談。<br>大人になったチジュが、ニイジェと再会し、二人でひとときの旅行に出かけるお話です。</p>
+  <p>物語は既に幕を下ろした後。登場人物はチジュ、ニイジェ、本編未登場の新キャラクターのみ。<br>
   本編を読んでくださったあなたへ、ささやかな再会のひとときを楽しんでいただけますように。<br>
   ※文字数はおよそ30,000字ほどです。</p>
-
-  <blockquote>
-    <p>チジュはようやく、この二人旅がもうすぐ終わることを自覚した。気づけば言葉がこぼれおちていた。<br>
-    「ニイ」<br>
-    「なんだい」<br>
-    「どうしてあのとき、いなくなってしまったの」</p>
-  </blockquote>
 </section>
 <hr>
