--- a/_includes/info-tree.liquid
+++ b/_includes/info-tree.liquid
@@ -5,6 +5,7 @@
 <p>架空の熱帯雨林を舞台とした樹木変身譚です。<br>樹木に変わる/変えられる人々を描く幻想（ファンタジー）小説でもあります。<br>遠い異国の生活描写に没入したい方、迫り来る幻想に慄きたい方、答えのない問いかけに惹かれる方へ。</p>
 <a href="https://kokyushobo.booth.pm/items/2530535" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i19726.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
 <hr>
+{% comment %}いずれ以下は特設ページへ移動したい。。{% endcomment %}
 <section>
   <header class="book-info__header">
     <h4>＜本編目次＞</h4>
