がんばっている

--- a/_includes/info-airplane.liquid
+++ b/_includes/info-airplane.liquid
@@ -3,7 +3,7 @@
 <p>紙飛行機の墜落率は100%だ。<br>ヒュッと宙返りして落ちる。いきなり直角に逆立ちする。<br>風に舞い上がったとしても、最後は大地に引き戻される。</p>
 <p>◇　◆　◇</p>
 <p>サイト上で公開してきた作品四編に加え、新たに書き下ろした短編・掌編を五編収録した幻想短編集です。<br>作品ジャンルはSF、寓話童話、ファンタジー、現代ものと様々ですが、<br class="hidden-phone">「幻想」を一本の軸に、様々な視点から切り取った物語をお届けできればと思います。</p>
-<a href="https://kokyushobo.booth.pm/items/229853" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<a href="https://kokyushobo.booth.pm/items/229853" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a>
 <hr>
 <section>
   <header class="book-info__header">
