--- a/_includes/info-aoakane.liquid
+++ b/_includes/info-aoakane.liquid
@@ -8,7 +8,10 @@
 <p>◇　◆　◇</p>
 <p>サハラ砂漠に憧れて、ひとりモロッコを訪ねたのが2014年春のこと。<br>その旅の記憶をもとに、八編のお話を書き下ろしました。<br>はたしてこれは旅行記なのか何なのか、<br class="hidden-phone">エッセイと詩と小説の間をふらふらと彷徨いつつ、<br class="hidden-phone">言葉の中でもう一度、モロッコを巡ってゆきます。</p>
 <p>また、巻頭と本文中には、旅先で撮影したカラー写真10枚を収録。<br>巻末にはオマケとして、実際の旅行先で掛かった費用などをひっそりまとめています。</p>
-<a href="https://kokyushobo.booth.pm/items/231726" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i12258.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<ul class="list__flex">
+  <li><a href="https://kokyushobo.booth.pm/items/231726" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
+  <li><a href="https://store.retro-biz.com/i12258.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：架空ストア（外部サイトへ）</a></li>
+</ul>
 <hr>
 <section>
   <header class="book-info__header">
