--- a/_includes/info-dream.liquid
+++ b/_includes/info-dream.liquid
@@ -5,7 +5,10 @@
 <p>本書は、著者の夢日記を元に創作された幻想掌編集です。<br>Twitterへ投稿した140字の夢日記から、当時見た夢を思い出し、ときには改変し、修飾して、忘れてしまった箇所は空想で繋ぎあわせながら、六つの掌編を書き起こしました。<br>
 いずれも厳密には夢そのものではなく、物語としては筋書きが曖昧で、詩と呼ぶには少々長すぎる。<br>
 おそらく最も近い言葉は「風景」なのだろうと思います。</p>
-<a href="https://kokyushobo.booth.pm/items/3427988" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i19729.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<ul class="list__flex">
+  <li><a href="https://kokyushobo.booth.pm/items/3427988" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
+  <li><a href="https://store.retro-biz.com/i19729.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：架空ストア（外部サイトへ）</a></li>
+</ul>
 <hr>
 <section>
   <header class="book-info__header">
@@ -26,6 +29,6 @@
   </blockquote>
 
   <p>Special Thanks<br>
-  表紙装画：ほがり仰夜さん <a href="https://twitter.com/torinomeBinzume" target="_blank" rel="nofollow">https://twitter.com/torinomeBinzume</a></p>
+  表紙装画：ほがり仰夜さん <a href="https://twitter.com/torinomeBinzume" target="_blank" rel="noopenner noreferrer">https://twitter.com/torinomeBinzume</a></p>
 </section>
 <hr>
