--- a/_includes/info-eien.liquid
+++ b/_includes/info-eien.liquid
@@ -4,7 +4,10 @@
 <p>◇　◆　◇</p>
 <p>「不在」をテーマにした、ふたつめの幻想短編集です。<br>何かを失い、あるいは投げ捨て、もしくは奪われたひとびとの、<br class="hidden-phone">永遠に埋まらない空席を眺めつづけるような短編と掌編を７編収録。</p>
 <p>各編の舞台は、遠い未来、現代東京、天国と地獄、そして暗闇をめぐります。<br>登場人物たちに関連性はありません。<br>そもそも登場人物さえ不在かもしれません。</p>
-<a href="https://kokyushobo.booth.pm/items/231727" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i20355.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<ul class="list__flex">
+  <li><a href="https://kokyushobo.booth.pm/items/231727" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
+  <li><a href="https://store.retro-biz.com/i20355.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：架空ストア（外部サイトへ）</a></li>
+</ul>
 <hr>
 <section>
   <header class="book-info__header">
