--- a/_includes/info-ryuyome.liquid
+++ b/_includes/info-ryuyome.liquid
@@ -3,7 +3,7 @@
 <p>守り神たる竜の在る世界。<br>最後に捧げられたのは、村でもっとも嫌われた娘。<br>野火のように激しく、荒々しく、彼女は村を憎んだ。</p>
 <p>◇　◆　◇</p>
 <p>風景幻想特化のハイファンタジー小説です。<br>起承転結よりも、世界の在り様やひとびとの仕草、感情、日常の手仕事を愛する方に、楽しんでいただけるように思います。<br>ファンタジーと銘打っているものの、明確な魔法は登場しません。</p>
-<a href="https://kokyushobo.booth.pm/items/229863" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<a href="https://kokyushobo.booth.pm/items/229863" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a>
 <hr>
 <section>
   <header class="book-info__header">
@@ -24,7 +24,7 @@
   </blockquote>
   <dl>
     <dt>Special Thanks</dt>
-    <dd>表紙装画：そぞらさん <a href="https://twitter.com/r_sozora" target="_blank" rel="nofollow">https://twitter.com/r_sozora</a></dd>
+    <dd>表紙装画：そぞらさん <a href="https://twitter.com/r_sozora" target="_blank" rel="noopenner noreferrer">https://twitter.com/r_sozora</a></dd>
   </dl>
 </section>
 <hr>
