--- a/_includes/info-tabibito.liquid
+++ b/_includes/info-tabibito.liquid
@@ -3,7 +3,7 @@
 <p>この本はガイドブックではありません。<br>
 もしかすると旅行記でもないのかもしれません。詩集と呼ぶにも何かが足りない。<br>
 2011年、半年間の一人旅の合間に書き継いできた言葉たちに、<br class="hidden-phone">新たに書きおろしたエッセイと言葉、旅先で撮影した写真を加え、一冊の本にまとめました。<br>巻頭にはカラー写真を四枚、各国ごとの章扉にもカラー写真を一枚ずつ掲載。<br>新装版発行にあたって、旅支度のおまけページを巻末に追加しました。</p>
-<a href="https://kokyushobo.booth.pm/items/229857" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<a href="https://kokyushobo.booth.pm/items/229857" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a>
 <hr>
 <section>
   <header class="book-info__header">
