--- a/assets/scss/core/_utility.scss
+++ b/assets/scss/core/_utility.scss
@@ -1,8 +1,8 @@
 // Utility
 $sp-width: 767px;
-$textColor: #231916;
+$textColor: #181614; //#231916;
 $bgColor: #fefbf9;
-$keyColor: #49aaa3; //37807a 49aaa3 //#55acee
+$keyColor: #37807a; //37807a 49aaa3 //#55acee
 $keyColorDark: #29605c;
 $subColor: #000000;
 
