--- a/_includes/info-postcard-6.liquid
+++ b/_includes/info-postcard-6.liquid
@@ -1,6 +1,6 @@
 <p>【個人連載雑誌 / 第6号 / A5 / オンデマンドフルカラー表紙 / 62ページ / 小部数・再版予定なし】</p>
 <p>『walking postcard』は、呼吸書房が2018年11月から発行している小さな雑誌です。<br>書き手はひとまず私ひとり。<br>一冊の本にまとまる前の、小説や旅行記、短編や掌編、散文、詩、独り言などなどを、<br class="hidden-phone">旅先から送る便りのように、気の向くままに、自由に、お届けできたらと思っています。</p>
-<a href="https://kokyushobo.booth.pm/items/4314220" target="_blank" rel="nofollow">書籍通販：BOOTH</a>
+<a href="https://kokyushobo.booth.pm/items/4314220" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a>
 <hr>
 <section>
   <header class="book-info__header">
