--- a/_includes/info-tree.liquid
+++ b/_includes/info-tree.liquid
@@ -3,7 +3,10 @@
 <p>透明な街、うつくしい街、ちょうど日付が変わる頃のこと。<br>一人の優しい娘が、唐突に、身に覚えもなく、一本の樹木に変えられてしまう。<br>真夜中の熱帯雨林に立ち尽くし、かつて人間だったその樹木は夢を見る。<br>そして思い出す。<br>子供のころ、すぐ間近に、樹木へ変身できる人間が居たことを。</p>
 <p>◇　◆　◇</p>
 <p>架空の熱帯雨林を舞台とした樹木変身譚です。<br>樹木に変わる/変えられる人々を描く幻想（ファンタジー）小説でもあります。<br>遠い異国の生活描写に没入したい方、迫り来る幻想に慄きたい方、答えのない問いかけに惹かれる方へ。</p>
-<a href="https://kokyushobo.booth.pm/items/2530535" target="_blank" rel="nofollow">書籍通販：BOOTH</a> / <a href="https://store.retro-biz.com/i19726.html" target="_blank" rel="nofollow">書籍通販：架空ストア</a>
+<ul class="list__flex">
+  <li><a href="https://kokyushobo.booth.pm/items/2530535" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
+  <li><a href="https://store.retro-biz.com/i19726.html" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：架空ストア（外部サイトへ）</a></li>
+</ul>
 <hr>
 {% comment %}いずれ以下は特設ページへ移動したい。。{% endcomment %}
 <section>
@@ -41,8 +44,8 @@
 
   <dl>
     <dt>Special Thanks</dt>
-    <dd>表紙装画：佐野裕一さん <a href="https://twitter.com/sunamerius" target="_blank" rel="nofollow">https://twitter.com/sunamerius</a></dd>
-    <dd>ジャケットデザイン：山川夜高さん <a href="https://libsy.net/" target="_blank" rel="nofollow">https://libsy.net/</a></dd>
+    <dd>表紙装画：佐野裕一さん <a href="https://twitter.com/sunamerius" target="_blank" rel="noopenner noreferrer">https://twitter.com/sunamerius</a></dd>
+    <dd>ジャケットデザイン：山川夜高さん <a href="https://libsy.net/" target="_blank" rel="noopenner noreferrer">https://libsy.net/</a></dd>
   </dl>
 </section>
 <hr>
