--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -46,11 +46,11 @@
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">event / イベント出店情報</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">contact / お問合せ・ご依頼など</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">privacy-policy / プライバシーポリシー</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">book-list / 書籍情報</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">web-novel / 小説を読む</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">other-work / 紀行文・写真・朗読に触れる</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="">online-store / 書籍通販</a></li>
-          </ul> 
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/#booklist">book-list / 書籍情報</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/#webnovel">web-novel / 小説を読む</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/#otherwork">other-work / 紀行文・写真・朗読に触れる</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/#onlinestore">online-store / 書籍販売</a></li>
+          </ul>
         </nav>
         <div class="footer__info">
           <img src="/assets/img/logo.png" alt="呼吸書房" loading="lazy" width="200" class="logo__image">
