--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -204,8 +204,10 @@ blockquote {
 .header {
 
 }
+.main {
+	min-height: calc(100dvh -  20rem);
+}
 .footer {
-	margin-top: 4rem;
 	padding: 4rem 0;
 	.flex {
 		justify-content: space-between;
